--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart apache
+- name: apache restart daemon
   service:
     name: "{{ apache_service }}"
-    state: "{{ apache_restart_state }}"
+    state: restarted
