--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,10 +6,7 @@ apache_listen_port_ssl: 443
 apache_create_vhosts: true
 apache_vhosts_filename: "vhosts.conf"
 apache_vhosts_template: "vhosts.conf.j2"
-
-# On Debian/Ubuntu, a default virtualhost is included in Apache's configuration.
-# Set this to `true` to remove that default.
-apache_remove_default_vhost: true
+apache_default_vhost_filename: "000-default"
 
 apache_global_vhost_settings: |
   DirectoryIndex index.php index.html
