--- a/tasks/configuration-Debian.yml
+++ b/tasks/configuration-Debian.yml
@@ -6,7 +6,7 @@
     line: "{{ item.line }}"
     state: present
   with_items: "{{ apache_ports_configuration_items }}"
-  notify: restart apache
+  notify: apache restart daemon
 
 - name: enable apache mods
   file:
@@ -14,14 +14,14 @@
     dest: "{{ apache_server_root }}/mods-enabled/{{ item }}"
     state: link
   with_items: "{{ apache_mods_enabled }}"
-  notify: restart apache
+  notify: apache restart daemon
 
 - name: disable apache mods
   file:
     path: "{{ apache_server_root }}/mods-enabled/{{ item }}"
     state: absent
   with_items: "{{ apache_mods_disabled }}"
-  notify: restart apache
+  notify: apache restart daemon
 
 - name: add apache vhosts configuration
   template:
@@ -30,7 +30,7 @@
     owner: root
     group: root
     mode: 0644
-  notify: restart apache
+  notify: apache restart daemon
   when: apache_create_vhosts
 
 - name: add vhost symlink in sites-enabled
@@ -38,5 +38,5 @@
     src: "{{ apache_conf_path }}/sites-available/{{ apache_vhosts_filename }}"
     dest: "{{ apache_conf_path }}/sites-enabled/{{ apache_vhosts_filename }}"
     state: link
-  notify: restart apache
+  notify: apache restart daemon
   when: apache_create_vhosts
