--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,53 +14,9 @@
   tags:
     - 'role::apache'
     - 'role::apache:install'
-
-- name: get installed apache version
-  command: "{{ apache_daemon_path }}{{ apache_daemon }} -v"
-  changed_when: false
-  check_mode: false
-  register: apache_register_version
-  tags:
-    - 'role::apache'
-    - 'role::apache:install'
     - 'role::apache:config'
 
-- name: create apache version variable
-  set_fact:
-    apache_version: "{{ apache_register_version.stdout.split()[2].split('/')[1] }}"
+- import_tasks: configuration.yml
   tags:
     - 'role::apache'
-    - 'role::apache:install'
-    - 'role::apache:config'
-
-- name: include apache 2.2 variables
-  include_vars: apache-22.yml
-  when: "apache_version.split('.')[1] == '2'"
-  tags:
-    - 'role::apache'
-    - 'role::apache:install'
-    - 'role::apache:config'
-
-- name: include apache 2.4 variables
-  include_vars: apache-24.yml
-  when: "apache_version.split('.')[1] == '4'"
-  tags:
-    - 'role::apache'
-    - 'role::apache:install'
-    - 'role::apache:config'
-
-- name: configure apache
-  include_tasks: "configuration-{{ ansible_os_family }}.yml"
-  tags:
-    - 'role::apache'
-    - 'role::apache:config'
-
-- name: ensure apache has selected state and enabled on boot
-  service:
-    name: "{{ apache_service }}"
-    state: "{{ apache_state }}"
-    enabled: true
-  tags:
-    - 'role::apache'
-    - 'role::apache:install'
     - 'role::apache:config'
