--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,5 +2,5 @@
 
 - name: apache restart daemon
   service:
-    name: "{{ apache_service }}"
+    name: '{{ apache_service }}'
     state: restarted
