--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -9,17 +9,17 @@
 
 - name: symlink apache mods
   file:
-    src: "{{ apache_server_root }}/mods-available/{{ item }}"
-    dest: "{{ apache_server_root }}/mods-enabled/{{ item }}"
+    src: '{{ apache_server_root }}/mods-available/{{ item }}'
+    dest: '{{ apache_server_root }}/mods-enabled/{{ item }}'
     state: link
-  with_items: "{{ apache_mods_enabled }}"
+  with_items: '{{ apache_mods_enabled }}'
   notify: apache restart daemon
   when: apache_mod_symlinks
 
 - name: add apache vhosts configuration
   template:
-    src: "{{ apache_vhosts_template }}"
-    dest: "{{ apache_conf_path }}/sites-available/{{ apache_vhosts_filename }}"
+    src: '{{ apache_vhosts_template }}'
+    dest: '{{ apache_conf_path }}/sites-available/{{ apache_vhosts_filename }}'
     owner: root
     group: root
     mode: 0644
@@ -28,16 +28,16 @@
 
 - name: symlink vhosts
   file:
-    src: "{{ apache_conf_path }}/sites-available/{{ apache_vhosts_filename }}"
-    dest: "{{ apache_conf_path }}/sites-enabled/{{ apache_vhosts_filename }}"
+    src: '{{ apache_conf_path }}/sites-available/{{ apache_vhosts_filename }}'
+    dest: '{{ apache_conf_path }}/sites-enabled/{{ apache_vhosts_filename }}'
     state: link
   notify: apache restart daemon
   when: apache_vhost_symlinks
 
 - name: add apache vhosts configuration
   template:
-    src: "{{ apache_vhosts_template }}"
-    dest: "{{ apache_conf_path }}/{{ apache_vhosts_filename }}"
+    src: '{{ apache_vhosts_template }}'
+    dest: '{{ apache_conf_path }}/{{ apache_vhosts_filename }}'
     owner: root
     group: root
     mode: 0644
@@ -46,6 +46,6 @@
 
 - name: enable and start apache
   service:
-    name: "{{ apache_service }}"
+    name: '{{ apache_service }}'
     state: started
     enabled: true
