--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,12 +1,12 @@
 ---
 
-apache_user: www-data
-apache_group: www-data
+apache_user: 'www-data'
+apache_group: 'www-data'
 apache_service: apache2
 apache_daemon: apache2
-apache_daemon_path: /usr/sbin/
-apache_server_root: /etc/apache2
-apache_conf_path: /etc/apache2
+apache_daemon_path: '/usr/sbin/'
+apache_server_root: '/etc/apache2'
+apache_conf_path: '/etc/apache2'
 
 # symlinks to mods-enabled directory required
 apache_mod_symlinks: true
