--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,22 +1,16 @@
 ---
-- name: include os specific variables
-  include_vars: "{{ ansible_os_family }}.yml"
+
+- name: include os specific vars
+  include_vars: '{{ item }}'
+  with_first_found:
+    - '{{ ansible_distribution }}_{{ ansible_distribution_major_version }}.yml'
+    - '{{ ansible_os_family }}.yml'
   tags:
     - 'role::apache'
     - 'role::apache:install'
     - 'role::apache:config'
 
-- name: define apache packages
-  set_fact:
-    apache_packages: "{{ __apache_packages | list }}"
-  when: apache_packages is not defined
-  tags:
-    - 'role::apache'
-    - 'role::apache:install'
-    - 'role::apache:config'
-
-- name: install apache
-  include_tasks: "installation-{{ ansible_os_family }}.yml"
+- import_tasks: installation.yml
   tags:
     - 'role::apache'
     - 'role::apache:install'
