--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -7,7 +7,7 @@ apache_conf_path: /etc/httpd/conf.d
 
 apache_vhosts_version: "2.2"
 
-__apache_packages:
+apache_packages:
   - httpd
   - httpd-devel
   - mod_ssl
