--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,33 +1,69 @@
 ---
 
+# listen ip for vhosts
 apache_listen_ip: '*'
+# listen port for non-ssl vhosts
 apache_listen_port: 80
+# listen port vor ssl vhosts
 apache_listen_port_ssl: 443
 
+# apache version to distinguish access control directives
 apache_vhosts_version: '2.4'
+# vhost configuration file, created on the ansible host
 apache_vhosts_filename: 'vhosts.conf'
+# vhost configuration template in the ansible 'templates' directory
 apache_vhosts_template: 'vhosts.conf.j2'
+
+# default allow_override setting to allow overrides in .htaccess
 apache_allow_override: 'All'
+# default apache options, overridden in vhosts config below
 apache_options: '-Indexes +FollowSymLinks'
 
+# settings for all vhosts
 apache_global_vhost_settings: |
   DirectoryIndex index.php index.html
 
+# list of vhosts, localhost enabled by default
+#
+# required vhost vars:
+#  - servername
+#
+# optional vhost vars:
+#  - serveralias
+#  - documentroot
+#  - redirect_ssl
+#  - options
 apache_vhosts:
+    # vhost name (required)
   - servername: 'localhost'
+    # # vhost alias, alternative name for the host (optional)
+    # serveralias: 'localhost'
+    # document root, main document tree (optional)
     documentroot: '/var/www/html'
-    # Enable to redirect to SSL enabled vhost below
+    # # redirect to SSL enabled vhost below (optional)
     # redirect_ssl: false
+    # # vhost options, override 'apache_options' (optional)
+    # options: '+FollowSymLinks'
 
+# ssl vhosts, none by default
 apache_vhosts_ssl: []
+#    # vhost name (required)
 #  - servername: 'localhost'
+#    # document root, main document tree (optional)
 #    documentroot: '/var/www/html'
+#    # certificate file (required)
 #    certificate_file: '/etc/ssl/certs/wildcard_chain.crt'
+#    # certificate key (required)
 #    certificate_key_file: '/etc/ssl/private/adfinis-sygroup.ch.key'
+#    # certificate chain (optional, deprecated)
+#    certificate_chain_file: '/etc/ssl/certs/chain.pem'
 
+# allowed ssl protocol versions
 apache_ssl_protocol: 'All -SSLv2 -SSLv3'
+# allowed cipher suites
 apache_ssl_cipher_suite: 'AES256+EECDH:AES256+EDH'
 
+# apache mods for debian based distros
 apache_mods_enabled:
   - rewrite.load
   - ssl.load
