--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: update apt cache
+  apt:
+    update_cache: yes
+    cache_valid_time: 3600
+  when: ansible_os_family == 'Debian'
+
 - name: install apache related packages
   package:
     name: '{{ apache_packages }}'
