--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,8 @@ apache_vhosts:
     documentroot: "/var/www/html"
     # Enable to redirect to SSL enabled vhost below
     # redirect_ssl: false
+    # add directives not covered by any variables
+    # apache_extra_options: |
 
 apache_allow_override: "All"
 apache_options: "-Indexes +FollowSymLinks"
@@ -24,6 +26,8 @@ apache_vhosts_ssl: []
 #   documentroot: "/var/www/html"
 #   certificate_file: "/etc/ssl/certs/wildcard_chain.crt"
 #   certificate_key_file: "/etc/ssl/private/adfinis-sygroup.ch.key"
+#   # add directives not covered by any variables
+#   apache_extra_options: |
 
 apache_ssl_protocol: "All -SSLv2 -SSLv3"
 apache_ssl_cipher_suite: "AES256+EECDH:AES256+EDH"
@@ -40,3 +44,4 @@ apache_state: started
 # Apache package state; use `present` to make sure it's installed, or `latest`
 # if you want to upgrade or switch versions using a new repo.
 apache_packages_state: present
+
