create an additional packages variable to install modules
This allows to install for example the openidc module

--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -8,5 +8,7 @@
 
 - name: install apache related packages
   package:
-    name: '{{ apache_packages }}'
     state: present
+  loop:
+    - '{{ apache_packages }}'
+    - '{{ apache_additional_packages }}'
