--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -83,3 +83,9 @@ apache_state: started
 # Apache package state; use `present` to make sure it's installed, or `latest`
 # if you want to upgrade or switch versions using a new repo.
 apache_packages_state: present
+
+# additional packages to install (defaults to an empty list)
+# example to install the openidc module:
+#apache_additional_packages:
+#  - mod_auth_openidc
+apache_additional_packages: []
