--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,7 +47,7 @@ apache_vhosts:
     # # vhost options, override 'apache_options' (optional)
     # options: '+FollowSymLinks'
     # add directives not covered by any variables
-    #   extra_options: |
+    # extra_options: |
 
 # ssl vhosts, none by default
 apache_vhosts_ssl: []
@@ -75,6 +75,7 @@ apache_ssl_cipher_suite: 'AES256+EECDH:AES256+EDH'
 apache_mods_enabled:
   - rewrite.load
   - ssl.load
+#  - auth_openidc.load
 apache_mods_disabled: []
 
 # Set initial apache state. Recommended values: `started` or `stopped`
