--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -8,7 +8,5 @@
 
 - name: install apache related packages
   package:
+    name: "{{ apache_packages + apache_additional_packages }}"
     state: present
-  loop:
-    - '{{ apache_packages }}'
-    - '{{ apache_additional_packages }}'
